@@ -6,6 +6,7 @@ echo -e $CL_MAG"============================================"$CL_RST
 # Initial set of variables to do nothing!
 export DO_CLEAN=1
 export DO_P7500=1 
+export DO_P750T=1 
 export DO_P7510=1 
 export DO_N7000=1
 export DO_P6800=1 
@@ -48,6 +49,9 @@ do
    if [[ $PARAM == 3g ]]; then 
       export DO_P7500=0 
    fi
+   if [[ $PARAM == t ]]; then 
+      export DO_P750T=0 
+   fi
    if [[ $PARAM == wifi ]]; then 
       export DO_P7510=0 
    fi
@@ -63,18 +67,29 @@ do
       export DO_P7510=0 
    fi
 done
-if [ $DO_P7500 -eq 1 ] && [ $DO_P7510 -eq 1 ] && [ $DO_N7000 -eq 1 ] && [ $DO_P6800 -eq 1 ]; then
+if [ $DO_P7500 -eq 1 ] && [ $DO_P750T -eq 1 ] && [ $DO_P7510 -eq 1 ] && [ $DO_N7000 -eq 1 ] && [ $DO_P6800 -eq 1 ]; then
       export DO_N7000=0 
       export DO_P7500=0 
       export DO_P7510=0 
 fi   
 if [ $DO_CLEAN -eq 0 ]; then
-   CLEAN_TXT="a CLEAN build of"
+   CLEAN_TXT1="a"
+   CLEAN_TXT2=$CL_RED
+   CLEAN_TXT3=" CLEAN"
+   CLEAN_TXT4=$CL_RST
+   CLEAN_TXT5=$CL_GRN" build of"
 else
-   CLEAN_TXT="the build of"
+   CLEAN_TXT1="the"
+   CLEAN_TXT2=""
+   CLEAN_TXT3=""
+   CLEAN_TXT4=""
+   CLEAN_TXT5=$CL_GRN" build of"
 fi
 if [ $DO_P7500 -eq 0 ]; then
    P7500_TXT=" GT-P7500/P7501"
+fi
+if [ $DO_P750T -eq 0 ]; then
+   P7500_TXT=" GT-P7500"
 fi
 if [ $DO_P7510 -eq 0 ]; then
    P7510_TXT=" GT-P7510/P7511"
@@ -85,7 +100,7 @@ fi
 if [ $DO_P6800 -eq 0 ]; then
    P6800_TXT=" GT-P6800"
 fi
-echo -n -e $CL_GRN"Start $CLEAN_TXT$P7500_TXT$P7510_TXT$N7000_TXT$P6800_TXT? [Y/n]: "$CL_RST
+echo -n -e $CL_GRN"Start $CLEAN_TXT1$CLEAN_TXT2$CLEAN_TXT3$CLEAN_TXT4$CLEAN_TXT5$P7500_TXT$P7510_TXT$N7000_TXT$P6800_TXT? [Y/n]: "$CL_RST
 read yno
 case $yno in
         [nN] | [n|N][O|o] )
@@ -100,7 +115,7 @@ echo -e $CL_MAG"============================================"$CL_RST
 echo -e $CL_MAG"set GooManager ROM version"$CL_RST
 echo -e $CL_MAG"============================================"$CL_RST
 export gooversion_t="3"
-export goobuild_t="01"
+export goobuild_t="02"
 export gooversion_build_t=$gooversion_t$goobuild_t
 echo -e $CL_MAG"============================================"$CL_RST
 echo -e $CL_MAG"Setup ccache"$CL_RST
@@ -137,7 +152,27 @@ if [ $DO_P6800 -eq 0 ]; then
       export P6800RESULT=1
    fi
 else
-   export P7500RESULT=1
+   export P6800RESULT=1
+fi
+if [ $DO_P750T -eq 0 ]; then
+   echo -e $CL_MAG"============================================"$CL_RST
+   echo -e $CL_MAG"Start the build for GT-P7500"$CL_RST
+   echo -e $CL_MAG"============================================"$CL_RST
+   . build/envsetup.sh && brunch p4
+   if [ $? -eq 0 ]; then
+      echo -e $CL_MAG"============================================"$CL_RST
+      echo -e $CL_GRN"Build for GT-P7500 successfull"$CL_RST
+      echo -e $CL_MAG"============================================"$CL_RST
+      export P750TRESULT=0
+      ./patchit.sh GT-P7500 GT-P7501 0 p4
+   else
+      echo -e $CL_MAG"============================================"$CL_RST
+      echo -e $CL_RED"Build for GT-P7500 failed"$CL_RST
+      echo -e $CL_MAG"============================================"$CL_RST
+      export P750TRESULT=1
+   fi
+else
+   export P750TRESULT=1
 fi
 if [ $DO_P7500 -eq 0 ]; then
    echo -e $CL_MAG"============================================"$CL_RST
@@ -205,6 +240,17 @@ echo -e $CL_MAG"Build & Patch of Ganbarou ROM done"$CL_RST
 echo -e $CL_MAG"============================================"$CL_RST
 echo "gooversion Tablet=$gooversion_t.$goobuild_t"
 echo "gooversion Tablet=$gooversion_build_t"
+if [ $DO_P750T -eq 0 ]; then
+   if [ $P750TRESULT -eq 0 ]; then
+      echo -e $CL_MAG"============================================"$CL_RST
+      echo -e $CL_GRN"Build for GT-P7500 done"$CL_RST
+      echo -e $CL_MAG"============================================"$CL_RST
+   else
+      echo -e $CL_MAG"============================================"$CL_RST
+      echo -e $CL_RED"Build for GT-P7500 failed"$CL_RST
+      echo -e $CL_MAG"============================================"$CL_RST
+   fi
+fi
 if [ $DO_P7500 -eq 0 ]; then
    if [ $P7500RESULT -eq 0 ]; then
       echo -e $CL_MAG"============================================"$CL_RST
