@@ -34,3 +34,5 @@ Added branch jb-4.2 and prepared 3G tablet for new ROM
 Corrected reboot bug in power menu & updated to latest Cm10.1 sources.
 
 Added switch for Phone UI and Tablet UI in settings. Thanks to SGT7
+Added default boot into Tablet UI or Phone UI depending on build.prop entry sys.tablet.mode
+
